--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head> 
 
 <body>
-  <video id="dynamic" controls></video>
   <input id="upload" type="file" accept="video/*"/>
  <main>
    <header>
@@ -21,7 +20,7 @@
    <div class="main">
      <div class="stickyTop">
      <div class="video-player">
-       <canvas id="video"></canvas>
+       <video id="dynamic"></video>
        <div class="controller">
         <button class="volume"><i class="fas fa-volume-up"></i></button>
          <div class="btns">
